# information-retrieval-project

./: .env.example  .gitignore  README.md  pyproject.toml
data/: Queries and Results.docx  all_opinions.csv.hierarchical.metrics.json  all_opinions.csv.sarcasm.metrics.json  manual_label_dataset_v1.xlsx
data/manually_labelled_data/: kavya.xlsx  potala.xlsx  wallace.xlsx
docs/: CLI-REFERENCE.md  model_evaluation_report.md
indexing/: README.md  app.py  index_to_solr.py
indexing/templates/: index.html
scripts/: InterAnnotatorAgreement_ReadMe.md  RedditCrawler_ReadMe.md  evaluate_pretrained.py  finetune_models.py  import_reddit.py  inter_annotator_agreement_calculator.py  reddit_data_cleaner_csv.py  reddit_upvoted_comments_crawler.py
src/opinion_scraper/: __init__.py  analysis.py  cleaner.py  cli.py  config.py  export.py  filter.py  relevance.py  storage.py
src/opinion_scraper/classification/: __init__.py  ablation.py  annotation.py  constants.py  data.py  inference.py  metrics.py  sarcasm.py  training.py
src/opinion_scraper/scraper/: __init__.py  base.py  bluesky.py  twitter.py
tests/: test_analysis.py  test_bluesky_scraper.py  test_classification_ablation.py  test_classification_annotation.py  test_classification_cli.py  test_classification_data.py  test_classification_inference.py  test_classification_sarcasm.py  test_classification_training.py  test_cleaner.py  test_config.py  test_export.py  test_filter.py  test_relevance.py  test_storage.py  test_twitter_scraper.py
