[project]
name = "opinion-scraper"
version = "0.1.0"
description = "Scrape Twitter/X and Bluesky for public opinions on AI tools"
requires-python = ">=3.10"
dependencies = [
    "twscrape>=0.17.0",
    "atproto>=0.0.55",
    "vaderSentiment>=3.3.2",
    "click>=8.1.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
opinion-scraper = "opinion_scraper.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opinion_scraper"]
